Renamed House of Hackers to Quasar

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#ffffff" />
     <meta
       name="description"
-      content="Official website of House of Hackers | The flagship hackathon of IIIT Ranchi"
+      content="Official website of QUASAR | The flagship hackathon of IIIT Ranchi"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -31,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>HOUSE OF HACKERS</title>
+    <title>QUASAR</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
